--- a/index.html
+++ b/index.html
@@ -237,8 +237,8 @@
 <body>
     <div class="container">
         <header>
-            <h1>🐱 Cat Hand</h1>
-            <p class="tagline">Memory Stitcher and Workshops</p>
+            <h1>Cat Hand</h1>
+            <p class="tagline">Memory Stitcher & Workshops</p>
         </header>
 
         <div class="intro">
@@ -318,25 +318,15 @@
             
             <div class="social-buttons">
                 <!-- TELEGRAM LINK - Replace with your actual Telegram link -->
-                <a href="https://t.me/yourusername" class="social-button telegram-button">
+                <a href="https://t.me/cathandstitcher" class="social-button telegram-button">
                     <span class="icon">✈️</span>
                     Join My Telegram
                 </a>
 
                 <!-- Optional: Other social links -->
-                <a href="mailto:your.email@example.com" class="social-button">
+                <a href="thecathandstitcher@gmail.com" class="social-button">
                     <span class="icon">📧</span>
                     Email Me
-                </a>
-
-                <a href="https://instagram.com/yourusername" class="social-button">
-                    <span class="icon">📷</span>
-                    Instagram
-                </a>
-
-                <a href="https://wa.me/1234567890" class="social-button">
-                    <span class="icon">💬</span>
-                    WhatsApp
                 </a>
             </div>
         </div>
