--- a/index.html
+++ b/index.html
@@ -314,11 +314,11 @@
 
         <div class="social-section">
             <h2>Let's Connect!</h2>
-            <p>Join my Telegram channel for updates, behind-the-scenes content, and exclusive offers</p>
+            <p>Let's stitch your story together - message me on Telegram</p>
             
             <div class="social-buttons">
                 <!-- TELEGRAM LINK - Replace with your actual Telegram link -->
-                <a href="https://t.me/cathandstitcher" class="social-button telegram-button">
+                <a href="https://t.me/thecathandstitcher" class="social-button telegram-button">
                     <span class="icon">✈️</span>
                     Join My Telegram
                 </a>
