--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
                 </a>
 
                 <!-- Optional: Other social links -->
-                <a href="thecathandstitcher@gmail.com" class="social-button">
+                <a href="mailto:thecathandstitcher@gmail.com" class="social-button">
                     <span class="icon">📧</span>
                     Email Me
                 </a>
