--- a/photo-embroidery.html
+++ b/photo-embroidery.html
@@ -186,67 +186,13 @@
             <!-- REPLACE these placeholder images with your actual embroidery photos -->
             
             <div class="gallery-item">
-                <div class="placeholder-image" style="height: 300px;">
-                    Replace with<br>photo-embroidery-1.jpg
-                </div>
+                <img src="Gallery/photo-stitching-1.jpg" alt="Photo Embroidery Work">
                 <div class="item-description">
-                    <div class="item-title">Family Portrait</div>
-                    <div class="item-details">Photo embroidered on linen • 2024</div>
+                    <div class="item-title">Photo Embroidery</div>
+                    <div class="item-details">Custom embroidered photo • 2024</div>
                 </div>
             </div>
-
-            <div class="gallery-item">
-                <div class="placeholder-image" style="height: 300px;">
-                    Replace with<br>photo-embroidery-2.jpg
-                </div>
-                <div class="item-description">
-                    <div class="item-title">Wedding Memory</div>
-                    <div class="item-details">Custom portrait • Framed</div>
-                </div>
-            </div>
-
-            <div class="gallery-item">
-                <div class="placeholder-image" style="height: 300px;">
-                    Replace with<br>photo-embroidery-3.jpg
-                </div>
-                <div class="item-description">
-                    <div class="item-title">Baby's First Photo</div>
-                    <div class="item-details">Newborn keepsake • Cotton thread</div>
-                </div>
-            </div>
-
-            <div class="gallery-item">
-                <div class="placeholder-image" style="height: 300px;">
-                    Replace with<br>photo-embroidery-4.jpg
-                </div>
-                <div class="item-description">
-                    <div class="item-title">Pet Memorial</div>
-                    <div class="item-details">In loving memory • 2023</div>
-                </div>
-            </div>
-
-            <div class="gallery-item">
-                <div class="placeholder-image" style="height: 300px;">
-                    Replace with<br>photo-embroidery-5.jpg
-                </div>
-                <div class="item-description">
-                    <div class="item-title">Childhood Memory</div>
-                    <div class="item-details">Vintage photo recreated • Silk on silk</div>
-                </div>
-            </div>
-
-            <div class="gallery-item">
-                <div class="placeholder-image" style="height: 300px;">
-                    Replace with<br>photo-embroidery-6.jpg
-                </div>
-                <div class="item-description">
-                    <div class="item-title">Anniversary Gift</div>
-                    <div class="item-details">50 years together • Mixed threads</div>
-                </div>
-            </div>
-
-        </div>
-
+            
         <div class="telegram-cta">
             <h2>Want to See More?</h2>
             <p>Join my Telegram channel for exclusive works, work-in-progress updates, and special offers!</p>
