--- a/photo-embroidery.html
+++ b/photo-embroidery.html
@@ -186,7 +186,9 @@
             <!-- REPLACE these placeholder images with your actual embroidery photos -->
             
             <div class="gallery-item">
-                <img src="Gallery/photo-stitching-1.jpg" alt="Photo Embroidery Work">
+                <a href="Gallery/photo-stitching-1.jpg" target="_blank">
+                    <img src="Gallery/photo-stitching-1.jpg" alt="Photo Embroidery Work">
+                </a>
                 <div class="item-description">
                     <div class="item-title">Photo Embroidery</div>
                     <div class="item-details">Custom embroidered photo • 2024</div>
