--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
         <header>
             <h1>🐱 Cat Hand</h1>
             <p class="tagline lang-content lang-en active">Memory Stitcher & Workshops</p>
-            <p class="tagline lang-content lang-it">Ricami di Memoria & Laboratori</p>
+            <p class="tagline lang-content lang-it">Memory Stitcher & Workshops</p>
         </header>
 
         <!-- ENGLISH VERSION -->
