--- a/photo-embroidery.html
+++ b/photo-embroidery.html
@@ -246,37 +246,15 @@
         <div class="gallery">
             
             <div class="gallery-item">
-                <a onclick="openLightbox('Gallery/photo-stitching-1.jpg')">
-                    <img src="Gallery/photo-stitching-1.jpg" alt="Photo Embroidery Work">
+                <a onclick="openLightbox('Gallery/photo-stitching-1.jpeg')">
+                    <img src="Gallery/photo-stitching-1.jpeg" alt="Photo Embroidery Work">
                 </a>
                 <div class="item-description">
                     <div class="item-title">Photo Embroidery</div>
-                    <div class="item-details">Custom embroidered photo • 2024</div>
+                    <div class="item-details">Custom embroidered photo</div>
                 </div>
             </div>
-
-            <div class="gallery-item">
-                <a onclick="openLightbox('Gallery/birthday-crown-1.jpg')">
-                    <img src="Gallery/birthday-crown-1.jpg" alt="Birthday Crown">
-                </a>
-                <div class="item-description">
-                    <div class="item-title">Birthday Crown</div>
-                    <div class="item-details">Handmade birthday keepsake</div>
-                </div>
-            </div>
-
-            <div class="gallery-item">
-                <a onclick="openLightbox('Gallery/birthday-crown-2.jpg')">
-                    <img src="Gallery/birthday-crown-2.jpg" alt="Birthday Crown">
-                </a>
-                <div class="item-description">
-                    <div class="item-title">Another Birthday Crown</div>
-                    <div class="item-details">Custom design with name</div>
-                </div>
-            </div>
-
-        </div>
-
+            
         <div class="telegram-cta">
             <h2>Want to See More?</h2>
             <p>Join my Telegram for exclusive works, work-in-progress updates, and special offers!</p>
