--- a/celebrations.html
+++ b/celebrations.html
@@ -246,8 +246,8 @@
         <div class="gallery">
             
             <div class="gallery-item">
-                <a onclick="openLightbox('Gallery/photo-stitching-1.jpeg')">
-                    <img src="Gallery/photo-stitching-1.jpeg" alt="Photo Embroidery Work">
+                <a onclick="openLightbox('Gallery/birthday-crown-1.jpg')">
+                    <img src="Gallery/birthday-crown-1.jpg" alt="Photo Embroidery Work">
                 </a>
                 <div class="item-description">
                     <div class="item-title">Photo Embroidery</div>
