--- a/celebrations.html
+++ b/celebrations.html
@@ -364,7 +364,7 @@
         <div class="gallery">
             
             <!-- Example 1: Single Image Product -->
-            <div class="gallery-item">
+            <!-- <div class="gallery-item">
                 <a onclick="openLightbox(['Gallery/birthday-crown-1.jpg'])">
                     <img src="Gallery/birthday-crown-1.jpg" alt="Birthday Crown">
                 </a>
@@ -372,7 +372,7 @@
                     <div class="item-title">Birthday Crown</div>
                     <div class="item-details">Custom embroidered crown</div>
                 </div>
-            </div>
+            </div> -->
 
             <!-- Example 2: Multiple Images Product -->
             <div class="gallery-item">
