--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
         </div>
 
         <header>
-            <h1>🐱 Cat Hand</h1>
+            <h1>Cat Hand</h1>
             <p class="tagline lang-content lang-en active">Memory Stitcher & Workshops</p>
             <p class="tagline lang-content lang-it">Memory Stitcher & Workshops</p>
         </header>
